# sofie-atem-connection

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cakefile  DEVELOPER.md  LICENSE  LICENSE-Hayden-Laptop  README.md  globals.html  index.html  jest.config.js  modules.html  package-lock.json  package.json  scratch.js  sonar-project.properties  tsconfig.build.json  tsconfig.docs.json  tsconfig.jest.json  tsconfig.json  tsconfig.lint.json  tslint.json
.circleci/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: highlight.css  search.js
classes/: Atem.html  BasicAtem.html  Commands.AudioMixerConfigCommand.html  Commands.AudioMixerHeadphonesCommand.html  Commands.AudioMixerHeadphonesUpdateCommand.html  Commands.AudioMixerInputCommand.html  Commands.AudioMixerInputUpdateCommand.html  Commands.AudioMixerInputUpdateV8Command.html  Commands.AudioMixerMasterCommand.html  Commands.AudioMixerMasterUpdateCommand.html  Commands.AudioMixerMonitorCommand.html  Commands.AudioMixerMonitorUpdateCommand.html  Commands.AudioMixerPropertiesCommand.html  Commands.AudioMixerPropertiesUpdateCommand.html  Commands.AudioMixerResetPeaksCommand.html  Commands.AudioRoutingOutputCommand.html  Commands.AudioRoutingOutputUpdateCommand.html  Commands.AudioRoutingSourceCommand.html  Commands.AudioRoutingSourceUpdateCommand.html  Commands.AutoTransitionCommand.html  Commands.AuxSourceCommand.html  (+377 more)
rust/: .gitignore  Cargo.toml  index.d.ts  index.js
rust/src/: lib.rs  rgba_to_yuva422.rs
src/: atem.coffee  (+7 more)
(+733 files in other folders)
